fix logo spacing

--- a/src/Sequencer.css
+++ b/src/Sequencer.css
@@ -8,8 +8,9 @@ body {
   max-width: 400px;
   height: auto;
   object-fit: contain;
-  margin: 20px auto;
+  margin: auto;
   transition: filter 0.1s all;
+  padding-left: 46px;
 }
 
 .custom-logo:hover {
